--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@ h1{text-align:center;margin:10px 0 5px}
 .section h2{border-bottom:1px solid #2ecc71;padding-bottom:6px;margin-bottom:10px}
 .item{display:flex;justify-content:space-between;padding:8px 0;border-bottom:1px dashed #233}
 .note{margin:14px 0;padding:10px;border-radius:12px;background:#14241b;text-align:center}
-.map-btn{display:block;width:100%;margin:14px 0;padding:12px;border-radius:14px;background:#2ecc71;color:#000;text-align:center;text-decoration:none;font-weight:600}
+.map-btn {
+  position: relative;
+  z-index: 1;
+  display: block;
+  margin: 12px auto;
+  padding: 12px 16px;
+  background: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 600;
+}
+
 .cocktail{margin:8px 0}
 .cocktail button{width:100%;background:#1c2b22;color:#fff;border:none;padding:10px;border-radius:12px;text-align:left;cursor:pointer}
 .cocktail-content{display:none;padding:10px 12px;font-size:14px;color:#cfc;background:#0f1a14;border-radius:0 0 12px 12px}
